rank(!fix): esconde o overflow que estava vazando do ranking com um scroll !O scroll é customizado, mas só é suportado pelo Chrome.

--- a/src/components/RankingContainer/rankingContainer.css
+++ b/src/components/RankingContainer/rankingContainer.css
@@ -4,51 +4,71 @@
   width: 700px;
   height: 500px;
   display: flex;
-  justify-content: center;
   align-items: center;
   flex-direction: column;
-  padding-top: 100px;
+  padding-top: 50px;
+  padding-bottom: 50px;
   gap: 70px;
-}
-
-#rank-content {
+  overflow-y: scroll;
 }
 
 #rank-content table {
-    background-color: white;
-    color: black;
-    padding: 30px;
-    border-radius: 6px;
-    border-collapse: collapse;
+  background-color: white;
+  color: black;
+  padding: 30px;
+  border-radius: 6px;
+  border-collapse: collapse;
 }
 
 #rank-content table td {
-    border: 1px solid gray;
-    padding: 10px;
+  border: 1px solid gray;
+  padding: 10px;
 }
 
 table tbody tr:hover {
-    background-color: rgb(0, 211, 0);
-    color: white;
-    border: 1px solid white;
+  background-color: rgb(0, 211, 0);
+  color: white;
+  border: 1px solid white;
 }
 
 table th {
-    border: 1px solid gray;
-    padding: 10px;
+  border: 1px solid gray;
+  padding: 10px;
 }
 
 #rank-btns {
   display: flex;
+  justify-content: center;
   gap: 80px;
+  width: 100%;
+  margin-top: 40px;
 }
 
 #rank-btns button {
   width: 120px;
-  height: 40px;
+  height: 50px;
   background-color: white;
+  border: 1px solid white;
   border: none;
   border-radius: 6px;
   padding: 2px;
   cursor: pointer;
+  padding: 10px;
+}
+
+#rank-btns button:hover {
+  background-color: rgb(0, 211, 0);
+  color: white;
+  border: 1px solid white;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 15px;
+  background-color: rgb(0, 94, 0);
+  margin: 15px;
+}
+::-webkit-scrollbar {
+  padding: 5px;
+  background-color: white;
+  border-radius: inherit;
 }
